--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=collab-writing
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://localhost:3306/writing
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.properties.hibernate.format_sql=true
